[gd_scene load_steps=3 format=3 uid="uid://c5cju4s3svuje"]

[ext_resource type="Script" path="res://main_menu/main_menu.gd" id="1_2m808"]
[ext_resource type="Texture2D" uid="uid://dji8x5aups8yn" path="res://main_menu/menu_sprites/Main_menu_pic2.png" id="2_t10b3"]

[node name="Menu" type="CanvasLayer"]
script = ExtResource("1_2m808")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("2_t10b3")

[node name="MainRect" type="ColorRect" parent="."]
offset_left = 72.0
offset_top = 424.0
offset_right = 608.0
offset_bottom = 720.0
color = Color(0, 0, 0, 1)
metadata/_edit_group_ = true

[node name="MarginContainer" type="MarginContainer" parent="MainRect"]
layout_mode = 0
offset_right = 310.0
offset_bottom = 300.0
theme_override_constants/margin_left = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MainRect/MarginContainer"]
layout_mode = 2

[node name="new_game_btn" type="Button" parent="MainRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
text = ">новая_игра_"
flat = true
alignment = 0
text_direction = 1

[node name="continue_btn" type="Button" parent="MainRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
text = ">продолжить_"
flat = true
alignment = 0
text_direction = 1

[node name="options_btn" type="Button" parent="MainRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
text = ">настройки_"
flat = true
alignment = 0
text_direction = 1

[node name="exit_btn" type="Button" parent="MainRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
text = ">выйти_из_игры_"
flat = true
alignment = 0
text_direction = 1

[node name="RichTextLabel" type="RichTextLabel" parent="MainRect"]
process_mode = 3
layout_mode = 2
offset_left = 16.0
offset_top = 216.0
offset_right = 326.0
offset_bottom = 266.0
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "_"
scroll_active = false
tab_size = 5
shortcut_keys_enabled = false

[node name="ExitRect" type="ColorRect" parent="."]
offset_left = 184.0
offset_top = 560.0
offset_right = 600.0
offset_bottom = 664.0
size_flags_horizontal = 4
color = Color(0, 0, 0, 0.666667)
metadata/_edit_group_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="ExitRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -181.5
offset_top = -50.0
offset_right = 181.5
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5
alignment = 1
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="ExitRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "точно выйти?"
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="ExitRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="yes_btn" type="Button" parent="ExitRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(0, 0.470588, 0, 0.588235)
theme_override_font_sizes/font_size = 30
text = " Я УВЕРЕН "

[node name="no_btn" type="Button" parent="ExitRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(0.470588, 0, 0, 0.588235)
theme_override_font_sizes/font_size = 30
text = "ПЕРЕДУМАЛ"

[node name="NewGameRect" type="ColorRect" parent="."]
offset_left = 192.0
offset_top = 448.0
offset_right = 608.0
offset_bottom = 560.0
size_flags_horizontal = 4
color = Color(0, 0, 0, 0.666667)
metadata/_edit_group_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="NewGameRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -181.5
offset_top = -50.0
offset_right = 181.5
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5
alignment = 1
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="NewGameRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Начать новую игру?"
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="NewGameRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="agree_btn" type="Button" parent="NewGameRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(0, 0.470588, 0, 0.588235)
theme_override_font_sizes/font_size = 30
text = " ПОЕХАЛИ "

[node name="disagree_btn" type="Button" parent="NewGameRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(0.470588, 0, 0, 0.588235)
theme_override_font_sizes/font_size = 30
text = "ТАК, СТОП"

[node name="InProgressRect" type="ColorRect" parent="."]
offset_left = 144.0
offset_top = 504.0
offset_right = 560.0
offset_bottom = 616.0
size_flags_horizontal = 4
color = Color(0, 0, 0, 0.666667)
metadata/_edit_group_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="InProgressRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -181.5
offset_top = -50.0
offset_right = 181.5
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5
alignment = 1
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="InProgressRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Элемент в разработке"
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="InProgressRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="OK_btn" type="Button" parent="InProgressRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(0, 0.470588, 0, 0.588235)
theme_override_font_sizes/font_size = 30
text = "ПОНЯТНО"

[node name="OptionsRect" type="ColorRect" parent="."]
offset_left = 72.0
offset_top = 424.0
offset_right = 608.0
offset_bottom = 720.0
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="OptionsRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsRect/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsRect/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="OptionsRect/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
text = "<управление>"

[node name="Label2" type="Label" parent="OptionsRect/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "двигаться влево - [A]/[<]"

[node name="Label3" type="Label" parent="OptionsRect/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "двигаться вправо - [D]/[>]"

[node name="Label4" type="Label" parent="OptionsRect/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "говорить - [F]/[C]"

[node name="Label5" type="Label" parent="OptionsRect/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "взаимодействие - [E]/[space]"

[node name="Label6" type="Label" parent="OptionsRect/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "открыть меню - [esc]/[enter]"

[node name="VBoxContainer2" type="VBoxContainer" parent="OptionsRect/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="OptionsRect/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "<общее>"

[node name="ScreenChanger" type="OptionButton" parent="OptionsRect/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
item_count = 2
selected = 1
fit_to_longest_item = false
popup/item_0/text = "Полный экран"
popup/item_0/id = 0
popup/item_1/text = "В окне"
popup/item_1/id = 1

[node name="Label2" type="Label" parent="OptionsRect/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Громкость"

[node name="HScrollBar" type="HScrollBar" parent="OptionsRect/MarginContainer/HBoxContainer/VBoxContainer2/Label2"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -113.0
offset_top = -3.0
offset_right = 113.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 1
min_value = -20.0
max_value = 10.0
step = 1.0
value = 10.0

[node name="OK_settings_btn" type="Button" parent="OptionsRect/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 30
text = "OK"

[connection signal="mouse_entered" from="MainRect/MarginContainer/VBoxContainer/new_game_btn" to="." method="_on_new_game_btn_mouse_entered"]
[connection signal="pressed" from="MainRect/MarginContainer/VBoxContainer/new_game_btn" to="." method="_on_new_game_btn_pressed"]
[connection signal="mouse_entered" from="MainRect/MarginContainer/VBoxContainer/continue_btn" to="." method="_on_continue_btn_mouse_entered"]
[connection signal="pressed" from="MainRect/MarginContainer/VBoxContainer/continue_btn" to="." method="_on_continue_btn_pressed"]
[connection signal="mouse_entered" from="MainRect/MarginContainer/VBoxContainer/options_btn" to="." method="_on_options_btn_mouse_entered"]
[connection signal="pressed" from="MainRect/MarginContainer/VBoxContainer/options_btn" to="." method="_on_options_btn_pressed"]
[connection signal="mouse_entered" from="MainRect/MarginContainer/VBoxContainer/exit_btn" to="." method="_on_exit_btn_mouse_entered"]
[connection signal="pressed" from="MainRect/MarginContainer/VBoxContainer/exit_btn" to="." method="_on_exit_btn_pressed"]
[connection signal="pressed" from="ExitRect/VBoxContainer/HBoxContainer/yes_btn" to="." method="_on_yes_btn_pressed"]
[connection signal="pressed" from="ExitRect/VBoxContainer/HBoxContainer/no_btn" to="." method="_on_no_btn_pressed"]
[connection signal="pressed" from="NewGameRect/VBoxContainer/HBoxContainer/agree_btn" to="." method="_on_agree_btn_pressed"]
[connection signal="pressed" from="NewGameRect/VBoxContainer/HBoxContainer/disagree_btn" to="." method="_on_disagree_btn_pressed"]
[connection signal="pressed" from="InProgressRect/VBoxContainer/HBoxContainer/OK_btn" to="." method="_on_ok_btn_pressed"]
[connection signal="item_selected" from="OptionsRect/MarginContainer/HBoxContainer/VBoxContainer2/ScreenChanger" to="." method="_on_screen_changer_item_selected"]
[connection signal="value_changed" from="OptionsRect/MarginContainer/HBoxContainer/VBoxContainer2/Label2/HScrollBar" to="." method="_on_h_scroll_bar_value_changed"]
[connection signal="pressed" from="OptionsRect/MarginContainer/OK_settings_btn" to="." method="_on_ok_settings_btn_pressed"]
